--- a/DateCalculator/DateCalculator/DateCalculator.vcxproj.filters
+++ b/DateCalculator/DateCalculator/DateCalculator.vcxproj.filters
@@ -33,7 +33,7 @@
     <ClInclude Include="pch.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="DateCalculator.h">
+    <ClInclude Include="DateCalculator.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="DateDiff.h">
