--- a/DateCalculator/DateCalculator/DateCalculator.vcxproj.filters
+++ b/DateCalculator/DateCalculator/DateCalculator.vcxproj.filters
@@ -1,66 +1,68 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Source Files">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
-    </Filter>
-    <Filter Include="Header Files">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;h++;hm;inl;inc;ipp;xsd</Extensions>
-    </Filter>
     <Filter Include="Resource Files">
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="GUI Managers">
+      <UniqueIdentifier>{597b47c9-d7c3-4771-b20a-b903bdd87dee}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Framework">
+      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
+      <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
+    </Filter>
+    <Filter Include="Calculator">
+      <UniqueIdentifier>{4e4b7fd7-61d6-4922-8d1a-1c7399bac8d1}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="DateCalculatorApp.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="DateCalculatorDlg.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="framework.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="targetver.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Resource.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="pch.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="DateCalculator.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="DateDiff.h">
-      <Filter>Header Files</Filter>
+      <Filter>GUI Managers</Filter>
     </ClInclude>
     <ClInclude Include="DateArith.h">
-      <Filter>Header Files</Filter>
+      <Filter>GUI Managers</Filter>
+    </ClInclude>
+    <ClInclude Include="DateDiff.h">
+      <Filter>GUI Managers</Filter>
+    </ClInclude>
+    <ClInclude Include="DateCalculatorApp.h">
+      <Filter>Framework</Filter>
+    </ClInclude>
+    <ClInclude Include="pch.h">
+      <Filter>Framework</Filter>
+    </ClInclude>
+    <ClInclude Include="framework.h">
+      <Filter>Framework</Filter>
+    </ClInclude>
+    <ClInclude Include="Resource.h">
+      <Filter>Framework</Filter>
+    </ClInclude>
+    <ClInclude Include="targetver.h">
+      <Filter>Framework</Filter>
+    </ClInclude>
+    <ClInclude Include="DateCalculator.hpp">
+      <Filter>Calculator</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DateCalculatorApp.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="DateCalculatorDlg.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Framework</Filter>
     </ClCompile>
     <ClCompile Include="pch.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Framework</Filter>
     </ClCompile>
-    <ClCompile Include="DateCalculator.cpp">
-      <Filter>Source Files</Filter>
+    <ClCompile Include="DateCalculatorDlg.cpp">
+      <Filter>GUI Managers</Filter>
     </ClCompile>
     <ClCompile Include="DateDiff.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>GUI Managers</Filter>
     </ClCompile>
     <ClCompile Include="DateArith.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>GUI Managers</Filter>
+    </ClCompile>
+    <ClCompile Include="DateCalculator.cpp">
+      <Filter>Calculator</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
